@@ -8,7 +8,7 @@
   <tr align="center" bgcolor="#e4e4e4">
     <td>
       <h1><big><font color="#3c34ec"><i>NuttX RTOS</i></font></big></h1>
-      <p>Last Updated: March 7, 2009</p>
+      <p>Last Updated: March 8, 2009</p>
     </td>
   </tr>
 </table>
@@ -1368,6 +1368,9 @@ nuttx-0.4.3 2009-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 	* Many fixes in FAT file system and in NSH for correct compilation with ZDS-II
 	* eZ80Acclaim!: Added and verified a NuttShell (NSH) configuration.
 	* eZ80Acclaim!: Correct endian-ness; defconfig files said BIG endian.
+	* Restructured parts of the uIP port for correct compilation with ZDS-II
+	* eZ80Acclaim!: Complete basic integration of the eZ80F91 EMAC driver.  The
+	  driver is basically functional and should mature prior to the 0.4.3 release.
 
 pascal-0.1.3 2009-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
